# Phosphom

./: 0AutoMapping.py  1AutoMapping&aging_allkinase.py  2aging_kinase.py  3Extractor.py  4ACC_Validator.py  5F-1score_Validator.py  README.md
Phosphom/: Substrates of protein.xlsx  __init__.py  __main__.py  extractor.py  gui.py  mapping.py  motif_db.py  normalization.py  pipeline.py  pyproject.toml  requirements.txt  validation.py
